추천 조회 Bitmask 및 Top-K 최적화